# cppzero

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  devbox.json
cmake/: compiler-options.cmake  dependencies.cmake
include/cppzero/: application.hpp  arena.hpp  calculation_engine.h  calculation_engine.hpp  document.hpp
src/: application.cpp  arena.cpp  calculation_engine.c  calculation_engine.cpp  document.cpp  main.cpp
src/examples/: CMakeLists.txt  basic_example.cpp
tests/: CMakeLists.txt
tests/bdd/: CMakeLists.txt  calculation_engine_test.cpp
tests/unit/: CMakeLists.txt  calculation_engine_test.cpp
